copy from old code

--- a/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
@@ -1,7 +1,4 @@
 ﻿@model OnlineShop.Areas.Admin.Models.LoginModel
-@{
-    Layout = null;
-}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -45,29 +42,23 @@
                                     <div class="text-center">
                                         <h1 class="h4 text-gray-900 mb-4">Welcome Back!</h1>
                                     </div>
-                                    <form class="user">
+                                    @using (Html.BeginForm("Login", "Login", FormMethod.Post))
+                                    {
                                         <div class="form-group">
-                                            <input type="email" class="form-control form-control-user"
-                                                   id="exampleInputEmail" aria-describedby="emailHelp"
-                                                   placeholder="Enter Email Address...">
+                                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control form-control-user", @autofocus = "autofocus" })
                                         </div>
                                         <div class="form-group">
-                                            <input type="password" class="form-control form-control-user"
-                                                   id="exampleInputPassword" placeholder="Password">
+                                            
+                                            @Html.PasswordFor(m => m.Password, new { @class = "form-control form-control-user" })
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
-                                                <input type="checkbox" class="custom-control-input" id="customCheck">
-                                                <label class="custom-control-label" for="customCheck">
-                                                    Remember
-                                                    Me
-                                                </label>
+                                                @Html.CheckBoxFor(m => m.RememberMe)
+                                                <label>Remember Me</label>
                                             </div>
                                         </div>
-                                        <a href="index.html" class="btn btn-primary btn-user btn-block">
-                                            Login
-                                        </a>
-                                    </form>
+                                        <button type="submit" class="btn btn-primary btn-user btn-block">Login</button>
+                                    }
                                     <hr>
                                     <div class="text-center">
                                         <a class="small" href="forgot-password.html">Forgot Password?</a>
