--- a/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
@@ -44,6 +44,7 @@
                                     </div>
                                     @using (Html.BeginForm("Login", "Login", FormMethod.Post))
                                     {
+                                        @Html.ValidationSummary(false, "", "Error")
                                         <div class="form-group">
                                             @Html.TextBoxFor(m => m.Username, new { @class = "form-control form-control-user", @autofocus = "autofocus" })
                                         </div>
