--- a/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Home/Index.cshtml
@@ -1,17 +1,8 @@
 ﻿
 @{
-    Layout = null;
+    ViewBag.Title = "Main page";
+    Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
-
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Index</title>
-</head>
-<body>
-    <div> 
-    </div>
-</body>
-</html>
+@section header{
+    Main page
+}
