--- a/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/Login/Index.cshtml
@@ -46,11 +46,11 @@
                                     {
                                         @Html.ValidationSummary(false, "", new { @class = "text-danger"})
                                         <div class="form-group">
-                                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control form-control-user", @autofocus = "autofocus" })
+                                            @Html.TextBoxFor(m => m.Username, new { @class = "form-control form-control-user", placeholder = "Username", autofocus = "autofocus" })
                                         </div>
                                         <div class="form-group">
                                             
-                                            @Html.PasswordFor(m => m.Password, new { @class = "form-control form-control-user" })
+                                            @Html.PasswordFor(m => m.Password, new { @class = "form-control form-control-user", placeholder = "Password" })
                                         </div>
                                         <div class="form-group">
                                             <div class="custom-control custom-checkbox small">
