--- a/OnlineShop/Areas/Admin/Views/User/Index.cshtml
+++ b/OnlineShop/Areas/Admin/Views/User/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@model List<Model.EF.User>
-
+﻿@model PagedList.IPagedList<Model.EF.User>
+@using PagedList.Mvc;
 
 @{
     ViewBag.Title = "Index";
@@ -9,51 +9,42 @@
 @section header{
     User list
 }
-@using (Html.BeginForm())
-{
-    <body>
-        <div class="card shadow mb-4">
-            <div class="card-body">
+
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                User list
+            </div>
+            <div class="panel-body">
                 <div class="table-responsive">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                    <table class="table table-striped table-bordered table-hover">
                         <thead>
                             <tr>
-                                <th>User Name</th>
+                                <th>#</th>
+                                <th>Username</th>
                                 <th>Name</th>
-                                <th>Address</th>
                                 <th>Email</th>
-                                <th>Phone</th>
-                                <th>Status</th>
                             </tr>
                         </thead>
-                        <tfoot>
-                            <tr>
-                                <th>User Name</th>
-                                <th>Name</th>
-                                <th>Address</th>
-                                <th>Email</th>
-                                <th>Phone</th>
-                                <th>Status</th>
-                            </tr>
-                        </tfoot>
                         <tbody>
-                            <tr>
-                                @foreach (var item in Model)
-                                {
-                                    <td>@Html.DisplayFor(m => item.UserName)</td>
-                                    <td>@Html.DisplayFor(m => item.Name)</td>
-                                    <td>@Html.DisplayFor(m => item.Address)</td>
-                                    <td>@Html.DisplayFor(m => item.Email)</td>
-                                    <td>@Html.DisplayFor(m => item.Email)</td>
-                                    <td>@Html.DisplayFor(m => item.Phone)</td>
-                                    <td>@Html.DisplayFor(m => item.Status)</td>
-                                }
-                            </tr>
-
+                            @foreach (var item in Model)
+                            {
+                                <tr>
+                                    <td>
+                                        <a href="/User/Edit/@item.ID">Edit</a>
+                                        <a href="/User/Delete/@item.ID">Delete</a>
+                                    </td>
+                                    <td>@item.UserName</td>
+                                    <td>@item.Name</td>
+                                    <td>@item.Email</td>
+                                </tr>
+                            }
                         </tbody>
                     </table>
+                    @Html.PagedListPager(Model, page => Url.Action("Index", new {page}))
                 </div>
             </div>
         </div>
-    </body>
-}
+    </div>
+</div>
